# ansible-execution-environment

./: README.md  pyproject.toml
demo-playbooks/: playbook1.yaml
worker/: execution-environment.yml
worker/context/: Dockerfile
