[tool.poetry]
name = "ansible-execution-environment"
version = "0.1.0"
description = ""
authors = ["Uros Bajzelj <ubajze@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
